2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the not hidden by
	default of the div in the toggle function

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Added a function to toggle
	an html code easly. The function is called toggle()

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed a null into
	foreach in SLA function

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed
	an error when add a module into visual map with the 
	wizard for bug: 3051058

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/nl.mo
	include/languages/pt_BR.po
	include/languages/es.po
	include/languages/pl.mo
	include/languages/ko.po
	include/languages/it.mo
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/ca.po
	include/languages/da.po
	include/languages/tr.po
	include/languages/de.po
	include/languages/sv.po
	include/languages/ja.po
	include/languages/zh_TW.po
	include/languages/he.po
	include/languages/bn.mo
	include/languages/fi.po
	include/languages/ar.mo
	include/languages/hi.po
	include/languages/zh_CN.po
	include/languages/fr.mo
	include/languages/te.po
	include/languages/eu.po
	include/languages/hu.po
	include/languages/ca.mo
	include/languages/da.mo
	include/languages/tr.mo
	include/languages/de.mo
	include/languages/sv.mo
	include/languages/ru.po
	include/languages/ja.mo
	include/languages/zh_TW.mo
	include/languages/he.mo
	include/languages/fi.mo
	include/languages/hi.mo